--- a/config.toml
+++ b/config.toml
@@ -13,10 +13,10 @@ theme = "airspace-hugo"
 #    weight = 3
 #    name = "Blog"
 #    url = "/blog"
-  [[menu.header]]
-    weight = 4
-    name = "Services"
-    url = "/service"
+#  [[menu.header]]
+#    weight = 4
+#    name = "Services"
+#    url = "/service"
   [[menu.header]]
     weight = 5
     name = "Contact"
@@ -33,10 +33,6 @@ theme = "airspace-hugo"
 
 # The site's parameters
 [params]
-
-  # If you want to remove the copyright text you need a Themefisher license.
-  # This license is offered with a 50% discount for all Hugo users.
-  # For information see https://github.com/gohugoio/hugoThemes/issues/260
 
   dateFormat = "6 January 2006"
 
